# PropertyMP3

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
.claude/: launch.json
.github/workflows/: build.yml
docs/: index.html
icons/: PropertyMP3.icns  README.md  app.rc
qml/: Main.qml
qml/components/: AccentButton.qml  AlbumArtView.qml  Card.qml  EditField.qml  SaveButton.qml  Theme.qml
src/: CoverImageProvider.h  MetadataController.cpp  MetadataController.h  main.cpp
